Fix list text spacing on small mobile screens.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,7 @@
 body {
   @apply bg-gray-100;
 }
+
+li span:nth-child(1) {
+  padding-right: 18px;
+}
